--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   ionicons: ^0.1.2
   http: ^0.13.4
+  just_audio: ^0.9.18
   
   
  
@@ -68,7 +69,9 @@ flutter:
   #   - images/a_dot_ham.jpeg
 
   assets:
-    - lib/Asset/
+    - assets/audio/
+    - lib/assets/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
